--- a/doc/Grammar.tex
+++ b/doc/Grammar.tex
@@ -80,7 +80,9 @@ and {\emptyP} (empty rule) belong to the BNF notation.
 All other symbols are terminals.\\
 
 \begin{tabular}{lll}
-{\nonterminal{File}} & {\arrow}  &{\nonterminal{TypeDefs}} {\nonterminal{ConstantDefs}} {\nonterminal{Node}} {\nonterminal{Assertion}} {\nonterminal{Initial}} {\nonterminal{Invariant}}  \\
+{\nonterminal{Program}} & {\arrow}   & {\nonterminal{TypeDefs}} {\nonterminal{ConstantDefs}} \\
+                                & & {\nonterminal{Declarations}} {\nonterminal{Flow}} {\nonterminal{Initial}} \\
+                                & & {\nonterminal{Assertion}} {\nonterminal{Invariant}}  \\
 \end{tabular}\\
 
 \begin{tabular}{lll}
@@ -222,16 +224,23 @@ All other symbols are terminals.\\
 \end{tabular}\\
 
 \begin{tabular}{lll}
-{\nonterminal{Node}} & {\arrow}  &{\terminal{node}} {\nonterminal{Identifier}} {\terminal{(}} {\nonterminal{MaybeTypedVars}} {\terminal{)}} {\terminal{returns}} {\terminal{(}} {\nonterminal{ListTypedVars}} {\terminal{)}} {\terminal{;}} \\
-                     &          & {\terminal{let}} \\
-                     &          & \hspace{10pt} {\nonterminal{NodeDeclarations}} {\nonterminal{StateDeclarations}} {\nonterminal{LocalDeclarations}} \\
-                     &          & \hspace{10pt} {\nonterminal{Flow}} {\nonterminal{ControlStructure}} {\nonterminal{Initial}}\\
-                     &          & {\terminal{tel}}  \\
+{\nonterminal{Node}} & {\arrow}   & {\terminal{node}} {\nonterminal{Identifier}} {\terminal{(}} {\nonterminal{MaybeTypedVars}} {\terminal{)}} {\terminal{returns}} {\terminal{(}} {\nonterminal{ListTypedVars}} {\terminal{)}} {\terminal{;}} \\
+                                & & {\terminal{let}} \\
+                                & & \hspace{5pt} {\nonterminal{Declarations}} \\
+                                & & \hspace{5pt} {\nonterminal{Flow}} \\
+                                & & \hspace{5pt} {\nonterminal{Outputs}} \\
+                                & & \hspace{5pt} {\nonterminal{ControlStructure}} \\
+                                & & \hspace{5pt} {\nonterminal{Initial}} \\
+                                & & {\terminal{tel}}  \\
 \end{tabular}\\
 
 \begin{tabular}{lll}
 {\nonterminal{ListNode}} & {\arrow}  &{\nonterminal{Node}}  \\
  & {\delimit}  &{\nonterminal{Node}} {\nonterminal{ListNode}}  \\
+\end{tabular}\\
+
+\begin{tabular}{lll}
+{\nonterminal{Declarations}} & {\arrow}  &{\nonterminal{NodeDecls}} {\nonterminal{StateDecls}} {\nonterminal{LocalDecls}}  \\
 \end{tabular}\\
 
 \begin{tabular}{lll}
@@ -255,7 +264,7 @@ All other symbols are terminals.\\
 \end{tabular}\\
 
 \begin{tabular}{lll}
-{\nonterminal{Flow}} & {\arrow}  &{\nonterminal{LocalDefinitions}} {\nonterminal{Outputs}} {\nonterminal{Transitions}}  \\
+{\nonterminal{Flow}} & {\arrow}  &{\nonterminal{LocalDefinitions}} {\nonterminal{Transitions}}  \\
 \end{tabular}\\
 
 \begin{tabular}{lll}
@@ -264,13 +273,13 @@ All other symbols are terminals.\\
 \end{tabular}\\
 
 \begin{tabular}{lll}
-{\nonterminal{Outputs}} & {\arrow}  &{\emptyP} \\
- & {\delimit}  &{\terminal{output}} {\nonterminal{ListInstantDefinition}}  \\
+{\nonterminal{Transitions}} & {\arrow}  &{\emptyP} \\
+ & {\delimit}  &{\terminal{transition}} {\nonterminal{ListTransition}}  \\
 \end{tabular}\\
 
 \begin{tabular}{lll}
-{\nonterminal{Transitions}} & {\arrow}  &{\emptyP} \\
- & {\delimit}  &{\terminal{transition}} {\nonterminal{ListTransition}}  \\
+{\nonterminal{Outputs}} & {\arrow}  &{\emptyP} \\
+ & {\delimit}  &{\terminal{output}} {\nonterminal{ListInstantDefinition}}  \\
 \end{tabular}\\
 
 \begin{tabular}{lll}
@@ -284,8 +293,7 @@ All other symbols are terminals.\\
 \end{tabular}\\
 
 \begin{tabular}{lll}
-{\nonterminal{InstantDefinition}} & {\arrow}  &{\nonterminal{Identifier}} {\terminal{{$=$}}} {\nonterminal{Expr}}  \\
- & {\delimit}  &{\nonterminal{Pattern}} {\terminal{{$=$}}} {\nonterminal{NodeUsage}}  \\
+{\nonterminal{InstantDefinition}} & {\arrow}  &{\nonterminal{Pattern}} {\terminal{{$=$}}} {\nonterminal{Expr}}  \\
 \end{tabular}\\
 
 \begin{tabular}{lll}
@@ -293,16 +301,13 @@ All other symbols are terminals.\\
 \end{tabular}\\
 
 \begin{tabular}{lll}
-{\nonterminal{Pattern}} & {\arrow}  &{\nonterminal{List2Id}}  \\
+{\nonterminal{Pattern}} & {\arrow}  &{\nonterminal{Identifier}}  \\
+ & {\delimit}  &{\terminal{(}} {\nonterminal{List2Id}} {\terminal{)}}  \\
 \end{tabular}\\
 
 \begin{tabular}{lll}
 {\nonterminal{List2Id}} & {\arrow}  &{\nonterminal{Identifier}} {\terminal{,}} {\nonterminal{Identifier}}  \\
  & {\delimit}  &{\nonterminal{Identifier}} {\terminal{,}} {\nonterminal{List2Id}}  \\
-\end{tabular}\\
-
-\begin{tabular}{lll}
-{\nonterminal{NodeUsage}} & {\arrow}  &{\terminal{(}} {\terminal{use}} {\nonterminal{Identifier}} {\nonterminal{ListExpr}} {\terminal{)}}  \\
 \end{tabular}\\
 
 \begin{tabular}{lll}
@@ -353,6 +358,7 @@ All other symbols are terminals.\\
  & {\delimit}  &{\terminal{(}} {\terminal{constr}} {\nonterminal{Identifier}} {\nonterminal{ListExpr}} {\terminal{)}}  \\
  & {\delimit}  &{\terminal{(}} {\terminal{project}} {\nonterminal{Identifier}} {\nonterminal{Natural}} {\terminal{)}}  \\
  & {\delimit}  &{\terminal{(}} {\terminal{select}} {\nonterminal{Identifier}} {\nonterminal{Identifier}} {\terminal{)}}  \\
+ & {\delimit}  &{\terminal{(}} {\terminal{use}} {\nonterminal{Identifier}} {\nonterminal{ListExpr}} {\terminal{)}}  \\
 \end{tabular}\\
 
 \begin{tabular}{lll}
