Made grammar usable with ExecuteMetaData

--- a/doc/Grammar.tex
+++ b/doc/Grammar.tex
@@ -10,6 +10,8 @@
 
 \maketitle
 
+%<*grammar>
+
 \newcommand{\emptyP}{\mbox{$\epsilon$}}
 \newcommand{\terminal}[1]{\mbox{{\textbf{\texttt {#1}}}}}
 \newcommand{\nonterminal}[1]{\mbox{$\langle \mbox{{\sl #1 }} \! \rangle$}}
@@ -400,7 +402,7 @@ All other symbols are terminals.\\
 {\nonterminal{TernOp}} & {\arrow}  &{\terminal{ite}}  \\
 \end{tabular}\\
 
-
+%</grammar>
 
 \end{document}
 
