--- a/highlighter/latex/boilerplate.tex
+++ b/highlighter/latex/boilerplate.tex
@@ -6,17 +6,23 @@
 
 \usepackage{listings}
 
+%<*def>
+
 \lstdefinelanguage{lama}{
-    morekeywords={ and, bool, definition, enum, int, let, 
+    morekeywords={ and, bool, definition, enum, int, let, match,
         mod, not, real, select, tel, typedef, xor, assertion, 
         constants, div, false, invariant, local, node, or, output, record, 
-        sint, transition, uint, automaton, constr, edge, initial, 
+        sint, transition, uint, automaton, constr, edge, initial, default,
         ite, location, nodes, project, returns, state, true, use
     },
+    otherkeywords={', =>, #},
     sensitive=true,
     morecomment=[l]{--}
 }
 
+%</def>
+
 \begin{document}
 \lstinputlisting[language=lama]{someFile.lm}
 \end{document}
+
