Write comment in English

--- a/highlighter/latex/boilerplate.tex
+++ b/highlighter/latex/boilerplate.tex
@@ -15,7 +15,7 @@
         sint, transition, uint, automaton, constr, edge, initial, default,
         ite, location, nodes, project, returns, state, true, use
     },
-    otherkeywords={', =>, #},
+    otherkeywords={', =>, \#},
     sensitive=true,
     morecomment=[l]{--}
 }
