Removed separation between outputs and definitions
This complicates code generation and buys us nothing
(it was even entirely ignored).

--- a/highlighter/latex/boilerplate.tex
+++ b/highlighter/latex/boilerplate.tex
@@ -11,7 +11,7 @@
 \lstdefinelanguage{lama}{
     morekeywords={ and, bool, definition, enum, int, let, match,
         mod, not, real, select, tel, typedef, xor, assertion, 
-        constants, div, false, invariant, local, node, or, output, record, 
+        constants, div, false, invariant, local, node, or, record, 
         sint, transition, uint, automaton, constr, edge, initial, default,
         ite, location, nodes, project, returns, state, true, use
     },
