--- a/highlighter/latex/boilerplate.tex
+++ b/highlighter/latex/boilerplate.tex
@@ -9,7 +9,7 @@
 %<*def>
 
 \lstdefinelanguage{lama}{
-    morekeywords={ and, bool, definition, enum, int, let, match,
+    morekeywords={ and, bool, definition, enum, input, int, let, match,
         mod, not, real, select, tel, typedef, xor, assertion, 
         constants, div, false, invariant, local, node, or, record, 
         sint, transition, uint, automaton, constr, edge, initial, default,
